--- a/styles/styles.css
+++ b/styles/styles.css
@@ -6,6 +6,9 @@
   padding: 0;
 }
 
+/*Se utilizó margin y padding para el reset, y margin en algunas ocasiones porque fue visto
+y utilizado en las clases grabadas y otorgado el permiso en la última clase de css en vivo*/
+
 body {
   background-color: #f0eeed;
   color: #003d51;
@@ -15,12 +18,7 @@ body {
 
 /* HEADER */
 
-header {
-  margin: 16px;
-}
-
 li {
-  margin: 8px;
   list-style-type: none;
 }
 
@@ -32,13 +30,9 @@ a {
 
 /*MAIN*/
 
-main {
-  margin: 24px;
-}
-
 h1 {
   font-size: 36px;
-  margin-bottom: 16px;
+  margin: 16px;
 }
 
 h2 {
@@ -51,18 +45,21 @@ h3 {
 
 p {
   font-size: 16px;
+  margin: 8px;
+}
+
+.discos {
+  color: #a70a94;
+  font-style: italic;
 }
 
 .articulos {
-  margin: 16px;
-  margin-left: 80px;
-  margin-right: 80px;
+  margin: 24px;
 }
 
 /*FOOTER*/
 
 footer {
-  margin-top: 40px;
   text-align: center;
   font-size: 14px;
 }
@@ -90,8 +87,7 @@ footer {
 
 .iconosRedes {
   height: 32px;
-  margin: 8px;
-  padding: 8px;
+  margin: 16px;
 }
 
 .videoEdit {
@@ -116,12 +112,12 @@ form label {
 
 input,
 textarea {
-  padding: 8px;
-  margin: 4px;
   border-radius: 16px;
   border: none;
   background-color: #c1d6e6;
   width: 40%;
+  padding: 8px;
+  margin: 4px;
   text-align: center;
 }
 
@@ -130,8 +126,7 @@ textarea {
   color: #f0eeed;
   font-weight: bold;
   font-size: 16px;
-  border: none;
-  border-radius: 16px;
   padding: 8px;
   margin: 8px;
+  border-radius: 16px;
 }
