--- a/styles/styles.css
+++ b/styles/styles.css
@@ -24,8 +24,8 @@ header {
 
 nav ul li {
   display: inline-block;
-  padding: 8px;
-  font-size: 24px;
+  padding: 4px 8px;
+  font-size: 22px;
 }
 
 li {
@@ -40,6 +40,10 @@ a {
 
 /*MAIN*/
 
+main {
+  display: flex;
+  flex-direction: column;
+}
 
 h1 {
   font-size: 36px;
@@ -68,8 +72,11 @@ p {
 
 .articulos {
   color: #086e83;
-  width: 50%;
+  width: 60%;
   margin: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 /*FOOTER*/
@@ -91,7 +98,7 @@ footer p {
 }
 
 .fotosBio {
-  width: 300px;
+  width: 320px;
   border-radius: 16px;
   padding: 8px;
 }
