--- a/styles/styles.css
+++ b/styles/styles.css
@@ -26,6 +26,7 @@ nav ul li {
   display: inline-block;
   padding: 4px 8px;
   font-size: 22px;
+  margin-top: 4px;
 }
 
 li {
@@ -43,6 +44,10 @@ a {
 main {
   display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-top: auto;
+  text-align: center;
 }
 
 h1 {
@@ -57,7 +62,7 @@ h2 {
 
 h3 {
   color: #a70a94;
-  padding: 4px;
+  padding: 8px;
 }
 
 p {
@@ -79,16 +84,62 @@ p {
   align-items: center;
 }
 
+.tour {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+}
+
 /*FOOTER*/
 
 footer {
   margin-top: 16px;
   text-align: center;
-  position: relative;
+
 }
 
 footer p {
   font-size: 14px;
+}
+
+/*CONTACTO*/
+
+form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  max-width: 600px; 
+}
+
+form label {
+  color: #086e83;
+  font-weight: bold;
+  margin-top: 16px;
+}
+
+input,
+textarea {
+  border-radius: 16px;
+  border: none;
+  background-color: #c1d6e6;
+  width: 60%;
+  max-width: 400px;
+  text-align: center;
+  padding: 8px;
+  margin: 8px;
+}
+
+.boton {
+  background-color: #086e83;
+  color: #f0eeed;
+  font-weight: bold;
+  font-size: 16px;
+  border-radius: 16px;
+  padding: 8px;
+  margin: 16px 0;
 }
 
 /*IMAGENES e ICONOS*/
@@ -103,22 +154,33 @@ footer p {
   padding: 8px;
 }
 
-.container-contact-tour {
-  position: relative;
-  padding-bottom: 100px; 
-}
 .fotosDeFondo {
   width: 100%;
+  height: auto;
+  display: flex;
+  margin-top: 8px;
 }
 
-.fotosDeCostado {
-  position: absolute;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.tour-background {
+  background-image: url("../assets/img/fondoTour.png");
+}
+
+.contact-background {
+  background-image: url("../assets/img/fondoContact.png");
+}
+
+.tour-background, .contact-background {
+  background-size: contain;
+  background-position: center top;
+  background-repeat: no-repeat;
   width: 100%;
-  z-index: -1;
-  bottom: -150px;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center; 
+  justify-content: flex-start;
+  text-align: center;
+  margin: 0 4px;
 }
 
 .iconosRedes {
@@ -138,31 +200,4 @@ footer p {
   height: 160px;
   border-radius: 16px;
   margin: 8px;
-}
-
-/*CONTACTO*/
-
-form label {
-  color: #086e83;
-  font-weight: bold;
-}
-
-input,
-textarea {
-  border-radius: 16px;
-  border: none;
-  background-color: #c1d6e6;
-  width: 40%;
-  text-align: center;
-  padding: 8px;
-  margin: 8px;
-}
-
-.boton {
-  background-color: #086e83;
-  color: #f0eeed;
-  font-weight: bold;
-  font-size: 16px;
-  border-radius: 16px;
-  padding: 8px;
 }
