--- a/styles/styles.css
+++ b/styles/styles.css
@@ -16,27 +16,51 @@ body {
   grid-template-rows: auto 1fr auto;
 }
 
-/* HEADER */
+/* HEADER + NAVBAR */
 
 header {
-  margin-top: 16px;
+  margin-top: 4px;
+}
+
+.logo {
+  width: 160px;
+  margin-right: 24px;
 }
 
 nav ul li {
   display: inline-block;
-  padding: 4px 8px;
+  padding: 4px 16px;
   font-size: 22px;
-  margin-top: 4px;
+  margin-top: 6px;
 }
 
-li {
+.listaNavbar {
   list-style-type: none;
 }
 
-a {
+.botonNavBar, .botonListaTour {
   color: #003d51;
   font-weight: bold;
   text-decoration: none;
+}
+
+.botonNavBar:hover, .botonListaTour:hover{
+  color: #0a6482;
+  text-shadow: 2px 2px 2px #a70a9523;
+}
+
+.active, .botonListaTour:active {
+  color: #a70a94;
+}
+
+.hamburguesaBoton {
+  border: 3px solid #a70a94;
+}
+
+.hamburguesaBoton[aria-expanded="true"] {
+  border: 2px solid #086e83;
+  background-color: #a70a94;
+  box-shadow: 0 0 10px rgba(167, 10, 148, 0.5);
 }
 
 /*MAIN*/
@@ -54,14 +78,16 @@ h1 {
   font-family: "Rubik", "Roboto", serif;
   font-weight: bold;
   font-size: 36px;
-  padding: 8px;
+  padding: 4px;
+  margin-top: 24px;
 }
 
 h2 {
   font-family: "Rubik", "Roboto", serif;
-  font-size: 28px;
+  font-size: 26px;
+  font-weight: 200;
   color: #086e83;
-  padding: 8px;
+  padding: 4px;
 }
 
 h3 {
@@ -69,13 +95,13 @@ h3 {
   font-size: 22px;
   font-weight: bold;
   color: #a70a94;
-  padding: 8px;
+  padding: 4px;
 }
 
 p {
   font-family:'Times New Roman', Times, serif ;
   font-size: 18px;
-  padding: 8px;
+  padding: 4px;
 }
 
 .discos {
@@ -111,6 +137,12 @@ footer {
 
 footer p {
   font-size: 14px;
+}
+
+/*TOUR*/
+
+.listaTour {
+  list-style-type: none;
 }
 
 /*CONTACTO*/
@@ -160,7 +192,7 @@ textarea:focus {
   font-size: 16px;
   border-radius: 16px;
   padding: 8px;
-  margin: 16px 0;
+  margin: 16px 0px;
 }
 
 .boton:hover {
@@ -173,21 +205,16 @@ textarea:focus {
 
 /*IMAGENES e ICONOS*/
 
-.logo {
-  width: 160px;
-}
-
 .fotosBio {
   width: 320px;
   border-radius: 16px;
-  padding: 8px;
+  margin-bottom: 8px;
 }
 
 .fotosDeFondo {
   width: 100%;
   height: auto;
   display: flex;
-  margin-top: 8px;
 }
 
 .tour-background {
@@ -209,7 +236,7 @@ textarea:focus {
   align-items: center; 
   justify-content: flex-start;
   text-align: center;
-  margin: 0 4px;
+  margin: 0 16px;
 }
 
 .iconosRedes {
@@ -229,4 +256,14 @@ textarea:focus {
   height: 160px;
   border-radius: 16px;
   margin: 8px;
+}
+
+
+/* MEDIA QUERIES */
+
+@media (max-width: 450px) {
+  .logo {
+    width: 120px;
+    margin-left: auto;
+  }
 }
