--- a/styles/styles.css
+++ b/styles/styles.css
@@ -115,8 +115,9 @@ p {
   width: 60%;
   margin: auto;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
+  gap: 16px;
 }
 
 .tour {
@@ -125,6 +126,34 @@ p {
   align-items: center;
   justify-content: center;
   margin-bottom: 16px;
+}
+
+/*BIO-HOME*/
+.bioContainer {
+  display: grid;
+  grid-template-areas: 
+    "bioTitulo bioTitulo"
+    "articulo1 articulo1"
+    "articulo2 articulo2";
+    gap: 16px;
+}
+
+.bioTitulo {
+  grid-area: bioTitulo;
+}
+
+#articulo1 {
+  grid-area: articulo1;
+}
+
+#articulo2 {
+  grid-area: articulo2;
+}
+
+.fotosBio {
+  width: 300px;
+  border-radius: 16px;
+  margin-top: 16px;
 }
 
 /*FOOTER*/
@@ -203,13 +232,12 @@ textarea:focus {
   background-color: #5e0754;
 }
 
-/*IMAGENES e ICONOS*/
-
-.fotosBio {
-  width: 320px;
-  border-radius: 16px;
-  margin-bottom: 8px;
+#mensaje {
+    resize: vertical;
+    min-height: 40px;
 }
+
+/*IMAGENES e ICONOS*/
 
 .fotosDeFondo {
   width: 100%;
@@ -265,5 +293,24 @@ textarea:focus {
   .logo {
     width: 120px;
     margin-left: auto;
+  }
+}
+
+@media (max-width: 1024px) {  
+
+  .fotosBio {
+    width: 240px;
+  }
+
+  .articulos {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 4px;
+  } 
+
+  h2{
+    font-size: 24px;
+    padding: 0 16px;
   }
 }
