--- a/styles/styles.css
+++ b/styles/styles.css
@@ -123,7 +123,7 @@ p {
 
 .articulos {
   color: #003d51;
-  width: 60%;
+  width: 62%;
   margin: auto;
   display: flex;
   flex-direction: row;
@@ -142,7 +142,7 @@ p {
 /*BIO-HOME*/
 .bioContainer {
   display: grid;
-  grid-template-areas: "bioTitulo bioTitulo" "articulo1 articulo1" "articulo2 articulo2";
+  grid-template-areas: "bioTitulo bioTitulo" "articulo1 articulo1" "articulo2 articulo2" "articulo3 articulo3" "articulo4 articulo4";
   gap: 16px;
 }
 
@@ -158,8 +158,16 @@ p {
   grid-area: articulo2;
 }
 
+#articulo3 {
+  grid-area: articulo3;
+}
+
+#articulo4 {
+  grid-area: articulo4;
+}
+
 .fotosBio {
-  width: 300px;
+  width: 320px;
   border-radius: 16px;
   margin-top: 16px;
 }
