--- a/styles/styles.css
+++ b/styles/styles.css
@@ -20,7 +20,7 @@ header {
 }
 
 .logo {
-  width: 160px;
+  width: 200px;
   margin: 0 8px;
 }
 
@@ -33,8 +33,9 @@ nav ul li {
 
 .listContainer {
   display: flex;
-  justify-content: center;
+  flex-direction: row;
   align-items: center;
+  justify-content: center;
   margin-right: 150px;
 }
 
@@ -70,7 +71,7 @@ nav ul li {
 .hamburguesaBoton[aria-expanded=true] {
   border: 2px solid #5e0754;
   background-color: #a70a94;
-  box-shadow: 0 0 10px rgba(167, 10, 148, 0.5);
+  box-shadow: 0 0 10px #5e0754;
 }
 
 /* MAIN */
@@ -90,8 +91,8 @@ h1, h2, h3 {
 
 h1 {
   color: #0b829a;
-  font-weight: bold;
   font-size: 36px;
+  font-weight: bold;
   margin-top: 24px;
 }
 
@@ -122,20 +123,21 @@ p {
 }
 
 .articulos {
-  color: #003d51;
-  width: 62%;
-  margin: auto;
   display: flex;
   flex-direction: row;
   align-items: center;
+  justify-content: center;
+  color: #003d51;
+  width: 62%;
+  margin: auto;
   gap: 16px;
 }
 
 .tour {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
   margin-bottom: 16px;
 }
 
@@ -199,6 +201,7 @@ form {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   width: 100%;
   max-width: 600px;
 }
@@ -210,9 +213,9 @@ form label {
 
 input,
 textarea {
+  background-color: #c1d6e6;
   border-radius: 16px;
   border: none;
-  background-color: #c1d6e6;
   width: 60%;
   max-width: 400px;
   text-align: center;
@@ -229,9 +232,9 @@ textarea:focus {
 .boton {
   background-color: #0b829a;
   color: #f0eeed;
+  border-radius: 16px;
   font-weight: bold;
   font-size: 16px;
-  border-radius: 16px;
   padding: 8px;
   margin: 16px 0px;
 }
@@ -254,16 +257,8 @@ textarea:focus {
   height: auto;
 }
 
-.tour-background {
+.tour-background, .contact-background {
   background-image: url("../assets/img/fondoTour.png");
-}
-
-.contact-background {
-  background-image: url("../assets/img/fondoContact.png");
-}
-
-.tour-background,
-.contact-background {
   background-size: contain;
   background-position: center top;
   background-repeat: no-repeat;
@@ -277,18 +272,25 @@ textarea:focus {
   margin: 0 16px;
 }
 
+.contact-background {
+  background-image: url("../assets/img/fondoContact.png");
+}
+
 .iconosRedes {
   height: 32px;
   padding: 0 16px;
   margin: 8px;
 }
 
-.musicEdit,
-.videoEdit {
+.musicEdit, .videoEdit {
   width: 70%;
   height: 160px;
   border-radius: 16px;
   margin: 8px;
+}
+
+.videoEdit {
+  width: 80%;
 }
 
 .arrow {
@@ -319,18 +321,37 @@ textarea:focus {
   }
 }
 @media (max-width: 768px) {
+  .logo {
+    width: 120px;
+    margin-left: auto;
+  }
   .listContainer {
     margin-right: 0px;
   }
+  nav ul li {
+    padding: 4px 0;
+  }
 }
 @media (max-width: 1024px) {
+  .logo {
+    width: 160px;
+    margin-left: auto;
+  }
   .fotosBio {
     width: 240px;
+  }
+  .listContainer {
+    margin-right: 0px;
+  }
+  nav ul li {
+    padding: 4px 0;
+    font-size: 18px;
   }
   .articulos {
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     gap: 4px;
   }
   h2 {
