--- a/sass/style.scss
+++ b/sass/style.scss
@@ -30,6 +30,12 @@ $color-texto-active: $color-terciario;
 // font
 @import url("https://fonts.googleapis.com/css2?family=Roboto+Flex:opsz,wght@8..144,100..1000&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap");
 
+// maps
+$map-fontsFamily: (
+  "Rubik": ("Rubik", "serif"),
+  "Roboto": ("Roboto", "serif"),
+  "Times": ("Times New Roman", "serif")
+);
 
 * {
   margin: 0;
@@ -52,7 +58,7 @@ $color-texto-active: $color-terciario;
 body {
   background-color: $color-fondo;
   color: $color-textos-p;
-  font-family: "Rubik", "Roboto", serif;
+  font-family: map-get($map-fontsFamily, "Rubik");
   text-align: center;
   min-height: 100vh;
   display: grid;
@@ -130,7 +136,7 @@ main {
 }
 
 h1, h2, h3 {
-  font-family: "Rubik", "Roboto", serif;
+  font-family: map-get($map-fontsFamily, "Rubik");
   padding: 4px;
 }
 
@@ -152,7 +158,7 @@ h3 {
 
 p {
   color: $color-textos-p;
-  font-family: "Times New Roman", Times, serif;
+  font-family: map-get($map-fontsFamily, "Times");
   @include fontStyle(18px, 200);
   padding: 4px;
 }
@@ -221,7 +227,8 @@ footer {
   margin-top: 16px;
   text-align: center;
   p {
-    font-size: 14px;
+    font-family: map-get($map-fontsFamily, "Roboto");
+    @include fontStyle(16px, 200);
   }
 }
 
