--- a/styles/styles.css
+++ b/styles/styles.css
@@ -7,7 +7,7 @@
 body {
   background-color: #f0eeed;
   color: #003d51;
-  font-family: "Rubik", "Roboto", serif;
+  font-family: "Rubik", "serif";
   text-align: center;
   min-height: 100vh;
   display: grid;
@@ -87,7 +87,7 @@ main {
 }
 
 h1, h2, h3 {
-  font-family: "Rubik", "Roboto", serif;
+  font-family: "Rubik", "serif";
   padding: 4px;
 }
 
@@ -112,7 +112,7 @@ h3 {
 
 p {
   color: #003d51;
-  font-family: "Times New Roman", Times, serif;
+  font-family: "Times New Roman", "serif";
   font-size: 18px;
   font-weight: 200;
   padding: 4px;
@@ -183,7 +183,9 @@ footer {
   text-align: center;
 }
 footer p {
-  font-size: 14px;
+  font-family: "Roboto", "serif";
+  font-size: 16px;
+  font-weight: 200;
 }
 
 /*TOUR*/
