--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,418 +1,16 @@
-// Variables
-
-// Paleta de colores base
-$color-principal: #0b829a;
-$color-secundario: #095c78;
-$color-terciario: #a70a94;
-$color-destacado: #5e0754;
-$color-fondo: #f0eeed;
-$color-contenido: #c1d6e6;
-$color-texto: #003d51;
-
-// Colores de botones
-$color-textos-botones: $color-fondo;
-$color-botones-navBar: $color-secundario;
-$color-botones-fondo: $color-principal;
-$color-botones-hover: $color-destacado;
-$color-botones-active: $color-terciario;
-$color-sombras: $color-destacado;
-$color-border: $color-terciario;
-
-// Colores de textos
-$color-h1: $color-principal;
-$color-h2: $color-secundario;
-$color-h3: $color-terciario;
-$color-textos-p: $color-texto;
-$color-span: $color-terciario;
-$color-texto-hover: $color-secundario;
-$color-texto-active: $color-terciario;
-
-// font
-@import url("https://fonts.googleapis.com/css2?family=Roboto+Flex:opsz,wght@8..144,100..1000&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap");
-
-// maps
-$map-fontsFamily: (
-  "Rubik": ("Rubik", "serif"),
-  "Roboto": ("Roboto", "serif"),
-  "Times": ("Times New Roman", "serif")
-);
-
-* {
-  margin: 0;
-  padding: 0;
-}
-
-// mixins
-@mixin flex($direction) {
-  display: flex;
-  flex-direction: $direction;
-  align-items: center;
-  justify-content: center;
-}
-
-@mixin fontStyle($fontSize, $fontWeight) {
-  font-size: $fontSize;
-  font-weight: $fontWeight;
-}
-
-body {
-  background-color: $color-fondo;
-  color: $color-textos-p;
-  font-family: map-get($map-fontsFamily, "Rubik");
-  text-align: center;
-  min-height: 100vh;
-  display: grid;
-  grid-template-rows: auto 1fr auto;
-}
-
-/* HEADER + NAVBAR */
-
-header {
-  margin-top: 4px;
-}
-
-.logo {
-  width: 200px;
-  margin: 0 8px;
-}
-
-nav {
-  ul {
-    li {
-      display: inline-block;
-      padding: 4px 16px;
-      margin-top: 6px;
-      @include fontStyle(22px, bold);
-    }
-  }
-}
-
-.listContainer {
-  @include flex(row);
-  margin-right: 150px;
-}
-
-.listaNavbar {
-  list-style-type: none;
-}
-
-.botonNavBar,
-.botonListaTour {
-  color: $color-botones-navBar;
-  text-decoration: none;
-  @include fontStyle(18px, bold);
-}
-
-.botonNavBar {
-  padding: 8px 16px;
-  margin: 0 8px;
-  &:hover {
-    color: $color-botones-hover;
-    text-shadow: 0 0 10px rgba(167, 10, 148, 0.5);
-  }
-}
-
-.active,
-.botonListaTour:active {
-  color: $color-botones-active;
-}
-
-.hamburguesaBoton {
-  border: 3px solid $color-botones-active;
-}
-
-.hamburguesaBoton[aria-expanded="true"] {
-  border: 2px solid $color-botones-hover;
-  background-color: $color-botones-active;
-  box-shadow: 0 0 10px $color-sombras;
-}
-
-/* MAIN */
-
-main {
-  @include flex(column);
-  margin-top: auto;
-  text-align: center;
-}
-
-h1, h2, h3 {
-  font-family: map-get($map-fontsFamily, "Rubik");
-  padding: 4px;
-}
-
-h1 {
-  color: $color-h1;
-  margin-top: 24px;
-  @include fontStyle(36px, bold);
-}
-
-h2 {
-  color: $color-h2;
-  @include fontStyle(26px, 200);
-}
-
-h3 {
-  color: $color-h3;
-  @include fontStyle(22px, bold);
-}
-
-p {
-  color: $color-textos-p;
-  font-family: map-get($map-fontsFamily, "Times");
-  @include fontStyle(18px, 200);
-  padding: 4px;
-}
-
-.discos {
-  color: $color-span;
-  font-style: italic;
-  @include fontStyle(18px, bold);
-}
-
-.articulos {
-  @include flex(row);
-  color: $color-textos-p;
-  width: 62%;
-  margin: auto;
-  gap: 16px;
-}
-
-.tour {
-  @include flex(column);
-  margin-bottom: 16px;
-}
-
-/*BIO-HOME*/
-
-.bioContainer {
-  display: grid;
-  grid-template-areas:
-    "bioTitulo bioTitulo"
-    "articulo1 articulo1"
-    "articulo2 articulo2"
-    "articulo3 articulo3"
-    "articulo4 articulo4";
-  gap: 16px;
-}
-
-.bioTitulo {
-  grid-area: bioTitulo;
-}
-
-#articulo1 {
-  grid-area: articulo1;
-}
-
-#articulo2 {
-  grid-area: articulo2;
-}
-
-#articulo3 {
-  grid-area: articulo3;
-}
-
-#articulo4 {
-  grid-area: articulo4;
-}
-
-.fotosBio {
-  width: 320px;
-  border-radius: 16px;
-  margin-top: 16px;
-}
-
-/*FOOTER*/
-
-footer {
-  margin-top: 16px;
-  text-align: center;
-  p {
-    font-family: map-get($map-fontsFamily, "Roboto");
-    @include fontStyle(16px, 200);
-  }
-}
-
-/*TOUR*/
-
-.listaTour {
-  list-style-type: none;
-  .botonListaTour:hover {
-    color: $color-botones-hover;
-    text-shadow: 0 0 8px $color-sombras;
-  }
-}
-
-.ulTour {
-  margin-right: 24px;
-}
-
-/*CONTACTO*/
-
-form {
-  @include flex(column);
-  width: 100%;
-  max-width: 600px;
-  label {
-    color: $color-h1;
-    @include fontStyle(16px, bold);
-    margin-top: 16px;
-  }
-}
-
-input,
-textarea {
-  background-color: $color-contenido;
-  border-radius: 16px;
-  border: none;
-  width: 60%;
-  max-width: 400px;
-  text-align: center;
-  padding: 8px;
-  margin: 8px;
-  &:focus {
-    outline: none;
-    border: 2px solid $color-border;
-    box-shadow: 2px 2px 2px $color-sombras;
-  }
-}
-
-.boton {
-  background-color: $color-botones-fondo;
-  color: $color-textos-botones;
-  border-radius: 16px;
-  @include fontStyle(16px, bold);
-  padding: 8px;
-  margin: 16px 0px;
-  &:hover {
-    background-color: $color-botones-hover;
-    box-shadow: 2px 2px 2px $color-sombras;
-  }
-  &:active {
-    background-color: $color-botones-active;
-  }
-}
-
-#mensaje {
-  resize: vertical;
-  min-height: 40px;
-}
-
-/*IMAGENES e ICONOS*/
-
-.fotosDeFondo {
-  width: 100%;
-  height: auto;
-}
-
-.tour-background{
-  background-image: url("../assets/img/fondoTour.png");
-  background-size: contain;
-  background-position: center top;
-  background-repeat: no-repeat;
-  width: 100%;
-  height: auto;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: flex-start;
-  text-align: center;
-  margin: 0 16px;
-}
-
-.contact-background {
-  background-image: url("../assets/img/fondoContact.png");
-  @extend .tour-background;
-}
-
-
-.iconosRedes {
-  height: 32px;
-  padding: 0 16px;
-  margin: 8px;
-}
-
-.musicEdit {
-  width: 70%;
-  height: 160px;
-  border-radius: 16px;
-  margin: 8px;
-}
-
-.videoEdit {
-  width: 80%;
-  @extend .musicEdit;
-}
-
-.arrow {
-  @include fontStyle(40px, bold);
-  color: $color-botones-hover;
-  cursor: pointer;
-  &:hover,
-  &:focus,
-  &:active {
-    color: $color-botones-hover;
-  }
-}
-
-.indicadores button {
-  width: 12px;
-  height: 12px;
-  margin-bottom: 8px;
-}
-
-.indicadores .active {
-  background-color: $color-botones-active;
-}
-
-/* MEDIA QUERIES */
-
-@media (max-width: 450px) {
-  .logo {
-    width: 120px;
-    margin-left: auto;
-  }
-}
-
-@media (max-width: 768px) {
-  .logo {
-    width: 120px;
-    margin-left: auto;
-  }
-
-  .listContainer {
-    margin-right: 0px;
-  }
-  nav ul li {
-    padding: 4px 0;
-  }
-}
-
-@media (max-width: 1024px) {
-  .logo {
-    width: 160px;
-    margin-left: auto;
-  }
-
-  .fotosBio {
-    width: 240px;
-  }
-
-  .listContainer {
-    margin-right: 0px;
-  }
-
-  nav ul li {
-    padding: 4px 0;
-    font-size: 18px;
-  }
-
-  .articulos {
-    @include flex(column);
-    gap: 4px;
-  }
-
-  h2 {
-    font-size: 24px;
-    padding: 0 16px;
-  }
-}
+@import 'partials/base/reset';
+@import 'partials/base/tipografia';
+
+@import 'partials/utilities/mixins';
+@import 'partials/utilities/variables';
+@import 'partials/utilities/maps';
+
+@import 'partials/components/body';
+@import 'partials/components/navBar';
+@import 'partials/components/main';
+@import 'partials/components/footer';
+@import 'partials/components/tour';
+@import 'partials/components/contact';
+@import 'partials/components/iframes';
+@import 'partials/components/img&icons';
+@import 'partials/components/mediaQ';
