--- a/sass/partials/components/_img&icons.scss
+++ b/sass/partials/components/_img&icons.scss
@@ -30,3 +30,10 @@
   padding: 0 16px;
   margin: 8px;
 }
+
+.pictureBio {
+  transition: ease 0.5s;
+  &:hover {
+    transform: scale(1.1);
+  }
+}
