--- a/sass/partials/components/_navBar.scss
+++ b/sass/partials/components/_navBar.scss
@@ -13,7 +13,7 @@ header {
     ul {
       li {
         display: inline-block;
-        padding: 4px 16px;
+        padding: 2px 16px;
         margin-top: 6px;
         @include fontStyle(36px, bold);
       }
@@ -33,8 +33,9 @@ header {
     color: $color-botones-navBar;
     text-decoration: none;
     @include fontStyle(24px, bold);
-    padding: 4px 12px;
+    padding: 2px 12px;
     margin: 0 8px;
+    transition: ease 0.5s;
     &:hover {
       color: $color-botones-hover;
       text-shadow: 0 0 10px rgba(167, 10, 148, 0.5);
