--- a/styles/styles.css
+++ b/styles/styles.css
@@ -33,7 +33,7 @@ header {
 
 nav ul li {
   display: inline-block;
-  padding: 4px 16px;
+  padding: 2px 16px;
   margin-top: 6px;
   font-size: 36px;
   font-weight: bold;
@@ -56,8 +56,9 @@ nav ul li {
   text-decoration: none;
   font-size: 24px;
   font-weight: bold;
-  padding: 4px 12px;
+  padding: 2px 12px;
   margin: 0 8px;
+  transition: ease 0.5s;
 }
 .botonNavBar:hover {
   color: #a70a94;
@@ -186,6 +187,7 @@ p {
 .listaTour .botonListaTour:hover {
   color: #a70a94;
   text-shadow: 0 0 8px #5e0754;
+  transition: ease 0.5s;
 }
 
 .ulTour {
@@ -336,6 +338,21 @@ footer p {
   transform: scale(1.1);
 }
 
+.vinilo {
+  width: 36px;
+  height: 36px;
+  margin-bottom: 8px;
+  animation: girar 3s linear infinite;
+}
+
+@keyframes girar {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
 /* MEDIA QUERIES */
 @media (max-width: 450px) {
   .logo {
