--- a/styles/styles.css
+++ b/styles/styles.css
@@ -353,6 +353,22 @@ footer p {
     transform: rotate(360deg);
   }
 }
+.sobre {
+  width: 36px;
+  height: 36px;
+  margin-bottom: 4px;
+  margin-left: 4px;
+  animation: vaiven 1s ease-in-out infinite alternate;
+}
+
+@keyframes vaiven {
+  from {
+    transform: rotate(25deg);
+  }
+  to {
+    transform: rotate(-25deg);
+  }
+}
 /* MEDIA QUERIES */
 @media (max-width: 450px) {
   .logo {
