--- a/styles/styles.css
+++ b/styles/styles.css
@@ -353,7 +353,7 @@ footer p {
     transform: rotate(360deg);
   }
 }
-.sobre {
+.sobre, .vhs, .microfono, .mano {
   width: 36px;
   height: 36px;
   margin-bottom: 4px;
