--- a/sass/style.scss
+++ b/sass/style.scss
@@ -9,6 +9,7 @@
 
 /*Components*/
 @import 'partials/components/body';
+@import 'partials/components/bioHome';
 @import 'partials/components/navBar';
 @import 'partials/components/main';
 @import 'partials/components/tour';
