--- a/sass/partials/components/_body.scss
+++ b/sass/partials/components/_body.scss
@@ -1,9 +1,9 @@
-body {
+/*Template general*/
+.containerTemplate {
     background-color: $color-fondo;
     color: $color-textos-p;
     font-family: map-get($map-fontsFamily, "Rubik");
     text-align: center;
-    min-height: 100vh;
     display: grid;
     grid-template-rows: auto 1fr auto;
   }
